src/tests/snapshots/mu__tests__class_methods__method_call.snap
---
source: src/tests/class_methods.rs
expression: snapshot
---
# Input:
class T:
  fn test():
    print "test"

T.test()


# Result (success):
none

# Stdout:
test


